https://online.sbis.ru/opendoc.html?guid=76305969-2da9-40b4-bbf2-95929dfb0286&des= Ошибка в разработку 25.07.2017 test-online.sbis.ru 3.17.20 - 241 Мелькает кривая страница авторизации при выборе "Блокировать" "Сме…

--- a/components/Panel/design/design.css
+++ b/components/Panel/design/design.css
@@ -1,4 +1,5 @@
-.genie-showEmptyElements .controls-Panel{
-   min-width: 75px;
-   min-height: 24px;
+/*group*/
+.genie-showEmptyElements .controls-Panel {
+  min-width: 75px;
+  min-height: 24px;
 }
