https://online.sbis.ru/opendoc.html?guid=a1baa754-e49e-48eb-b399-fbb61685f3a9&des= Ошибка в разработку 25.07.2017 Автодополнение строки поиска растягивается на весь экран (см. скрин) - в строку поиска левого брауз…

--- a/components/Suggest/Suggest.less
+++ b/components/Suggest/Suggest.less
@@ -14,7 +14,8 @@
     width: @suggest-loading-width;
   }
 }
-.controls-Suggest__picker {
+//Чтобы не зависеть от стилей FloatArea
+.controls-FloatArea.controls-Suggest__picker {
   color: @suggest-picker-color;
   width: @suggest-picker-standard-width;
   border: @suggest-picker-border;
