теперь это все Display

--- a/components/WSControls/Lists/ListView2.tmpl
+++ b/components/WSControls/Lists/ListView2.tmpl
@@ -22,7 +22,7 @@
               name="itemsToolbar"
               idProperty="{{ _options.idProperty }}"
               itemsActions="{{ _options.itemsActions }}"
-              activeItem="{{ { 'parentContainer': _container, 'itemsProjection': _itemsProjection, 'hoveredIndex': hoveredIndex } }}"
+              activeItem="{{ { 'parentContainer': _container, 'display': _display, 'hoveredIndex': hoveredIndex } }}"
       />
    </ws:if>
 
