https://online.sbis.ru/opendoc.html?guid=c0bbc74c-9ff5-4652-80a5-2e82448c2525&des= Ошибка в разработку 12.07.2017 Редизайн. Розница Онлайн. Размеры иконок в ПМО должны быть 84рхonline-inside_3.7.5.151 (ver 3.7.5.15…

--- a/themes/prestonew/theme.less
+++ b/themes/prestonew/theme.less
@@ -1118,3 +1118,11 @@ body .controls-ItemActions .controls-Button__icon.icon-size {
      color: @link-hover-text-color;
     }
 }
+
+//Костыль, т.к. в престо иконки в ПМО большие, а на онлайне средние
+.controls-operationsPanel__actions .icon-24 {
+    font-size: 3rem !important;
+    height: 3rem !important;
+    width: 3rem !important;
+    line-height: 3rem !important;
+}
