DataGridView: Поправил селектор для зафиксированного заголовка в таблицах.
https://online.sbis.ru/opendoc.html?guid=39c8fc69-18e9-44b4-9f19-2e55e4d9e5bb&des=
Ошибка в разработку 24.07.2017 УУ. Нет разделительной линии под итогами в панели расходов 1. Зайти на разводящую Учета 2. Нажать на…

--- a/components/DataGridView/DataGridView.less
+++ b/components/DataGridView/DataGridView.less
@@ -450,8 +450,8 @@
   }
 }
 .ws-sticky-header__wrapper-scrolled {
-  .ws-sticky-header__header-container {
-    .controls-DataGridView.controls-DataGridView__hasSeparator.controls-ListView__dataLoaded {
+  &>.ws-sticky-header__header-container {
+    &>.controls-DataGridView.controls-DataGridView__hasSeparator.controls-ListView__dataLoaded {
        .controls-DataGridView__table {
           border-width: @data-grid-table-separator-border-width;
        }
