https://online.sbis.ru/opendoc.html?guid=728cf1fc-0165-45d8-911b-84028e8780fa&des= Ошибка в разработку 27.06.2017 Прошу иконку icon-16 icon-Publish2 сделать немного побольше, чтобы относите других она была более пр…

--- a/themes/fonts/carry-presto.less
+++ b/themes/fonts/carry-presto.less
@@ -28,6 +28,15 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.cp-icon-ConnectionPeriod:before {
+  content: "\e9eb";
+}
+.cp-icon-BigRemark:before {
+  content: "\e9ea";
+}
+.cp-icon-Rabota:before {
+  content: "\e9e8";
+}
 .cp-icon-SettingsNew:before {
   content: "\e9d9";
 }
@@ -226,6 +235,9 @@
 .cp-icon-Scissors:before {
   content: "\e969";
 }
+.cp-icon-VacationNull:before {
+  content: "\e96a";
+}
 .cp-icon-UnFullScrin:before {
   content: "\e95e";
 }
@@ -264,6 +276,9 @@
 }
 .cp-icon-Scale:before {
   content: "\e94f";
+}
+.cp-icon-statusDeparted:before {
+  content: "\e94b";
 }
 .cp-icon-GeoCluster:before {
   content: "\e947";
@@ -382,6 +397,12 @@
 .cp-icon-ExpandDown:before {
   content: "\e802";
 }
+.cp-icon-Autonomcash:before {
+  content: "\e76c";
+}
+.cp-icon-Skeleton:before {
+  content: "\e76d";
+}
 .cp-icon-AddNote:before {
   content: "\e76e";
 }
@@ -403,8 +424,14 @@
 .cp-icon-OutHotel:before {
   content: "\e765";
 }
+.cp-icon-GooglePlus:before {
+  content: "\e763";
+}
 .cp-icon-ViewBack:before {
   content: "\e76";
+}
+.cp-icon-Vkrugu:before {
+  content: "\e762";
 }
 .cp-icon-Yes:before {
   content: "\e75e";
@@ -589,6 +616,12 @@
 .cp-icon-ReduceButton:before {
   content: "\e702";
 }
+.cp-icon-ButtonLeft:before {
+  content: "\e6ff";
+}
+.cp-icon-ButtonRight:before {
+  content: "\e700";
+}
 .cp-icon-EditHover:before {
   content: "\e6fe";
 }
@@ -660,6 +693,9 @@
 }
 .cp-icon-NodeCurtailed:before {
   content: "\e6d3";
+}
+.cp-icon-EmoiconAngry:before {
+  content: "\e6a9";
 }
 .cp-icon-EraseHover:before {
   content: "\e6c5";
@@ -736,6 +772,12 @@
 .cp-icon-Arrow1730:before {
   content: "\e692";
 }
+.cp-icon-CallOutgoing:before {
+  content: "\e65f";
+}
+.cp-icon-CallIncoming:before {
+  content: "\e68e";
+}
 .cp-icon-UnPublish:before {
   content: "\e62f";
 }
@@ -802,6 +844,9 @@
 .cp-icon-Wallet:before {
   content: "\e601";
 }
+.cp-icon-Vacation:before {
+  content: "\e602";
+}
 .cp-icon-UsbKey:before {
   content: "\e603";
 }
@@ -826,6 +871,21 @@
 .cp-icon-Trade:before {
   content: "\e60c";
 }
+.cp-icon-ThumbUp2:before {
+  content: "\e60e";
+}
+.cp-icon-ThumbUp:before {
+  content: "\e60f";
+}
+.cp-icon-ThumbDown2:before {
+  content: "\e611";
+}
+.cp-icon-ThumbDown:before {
+  content: "\e612";
+}
+.cp-icon-Sick:before {
+  content: "\e618";
+}
 .cp-icon-Show:before {
   content: "\e619";
 }
@@ -843,6 +903,9 @@
 }
 .cp-icon-Send:before {
   content: "\e61f";
+}
+.cp-icon-SelfVacation:before {
+  content: "\e620";
 }
 .cp-icon-SelfPin:before {
   content: "\e621";
@@ -967,6 +1030,9 @@
 .cp-icon-Exclamation:before {
   content: "\e65b";
 }
+.cp-icon-Erase:before {
+  content: "\e65c";
+}
 .cp-icon-EmptyMessage:before {
   content: "\e65d";
 }
@@ -1021,8 +1087,8 @@
 .cp-icon-Admin:before {
   content: "\e676";
 }
-.cp-icon-Autonomcash:before {
-  content: "\e76c";
+.cp-icon-PaymentPart2:before {
+  content: "\e975";
 }
 .cp-icon-Calendar2:before {
   content: "\e75f";
@@ -1051,15 +1117,6 @@
 .cp-icon-Print:before {
   content: "\e633";
 }
-.cp-icon-Erase:before {
-  content: "\e65c";
-}
 .cp-icon-Close:before {
   content: "\e66c";
-}
-.cp-icon-ButtonLeft:before {
-  content: "\e6ff";
-}
-.cp-icon-ButtonRight:before {
-  content: "\e700";
 }
