--- a/themes/prestonew/theme.less
+++ b/themes/prestonew/theme.less
@@ -7,6 +7,9 @@ body {
    font-size: 1rem !important;
 }
 body {
+   .ws-validation-error > textarea {
+      background-color: @text-box-error-bg !important; // перебиваю стили fieldAbstract
+   }
     //Todo: сделать @accent-color - #FFCC99  https://online.sbis.ru/opendoc.html?guid=47bdafa8-88ab-4cb2-9383-89ffd7c9dcdd
     //сейчас пока сделаем так, чтобы не разломать версию 3.7.5.150
     .controls-accent-text {
