https://online.sbis.ru/opendoc.html?guid=3063d8d3-4f48-4423-95cd-ea5846a2b06f&des= Ошибка в разработку 26.07.2017 test-online.sbis.ru 3.17.20 - 260 В отчетах Розница/Престо Розница офлайн 3.17.20-656 При клике заг…

--- a/themes/header.less
+++ b/themes/header.less
@@ -146,7 +146,7 @@
 
 .controls-Link {
   &.ws-linkHeader, &.ws-header, &.ws-bigSubheader, &.ws-subheader {
-    &.controls-Click__active {
+    &.controls-Click__active, &.controls-Click__active .controls-Button__text {
       text-decoration: @link-header-text-decoration;
       color: @link-header-hover-color;
     }
