https://online.sbis.ru/opendoc.html?guid=b7d0dbd1-be4e-4143-a247-d9b999700a69&des= Ошибка в разработку 27.07.2017 Переехала стрелка у фильтра в ленте событий в карточке физика 1. Салон - Клиенты - карточка физика…

--- a/components/DropdownList/DropdownList.less
+++ b/components/DropdownList/DropdownList.less
@@ -37,7 +37,7 @@
    .controls-DropdownList__beforeCaptionWrapper {
       display: none;
       position: relative;
-      top: 2px;
+      top: @DropdownList-before-caption-wrapper-top;
       .flex-shrink(0);
    }
    .controls-DropdownList__afterCaptionWrapper {
