--- a/themes/prestonew/variables.less
+++ b/themes/prestonew/variables.less
@@ -968,6 +968,7 @@
 @DropdownList-picker-max-height:                      20rem;
 @DropdownList-footer-select-top:                      0.28rem;
 @DropdownList-picker-menu-line-height:                3.24rem;
+@DropdownList-before-caption-wrapper-top:             0.16rem;
 @DropdownList-after-caption-wrapper-top:              .4rem;
 @DropdownList-footer-hasMore-left:                    .28rem;
 @DropdownList-footer-hasMore-left-multiselect:        2.35rem;
