DateRangeSlider: Поправил новые темы
https://online.sbis.ru/opendoc.html?guid=93fbd1c2-2114-4273-9b31-f4228821fd66&des=
Ошибка в разработку 17.07.2017 Редизайн. Темная тема. pre-test-online.sbis.ru 3.17.20 - 136 Окно быстрого выбора периода не соответ…

--- a/themes/prestonew/theme.less
+++ b/themes/prestonew/theme.less
@@ -274,6 +274,11 @@ body {
       }
    }
 
+   // Выпилить как будем делать новые темы.
+   .controls-DateRangeChoose__bodyWrapper {
+      padding-top: 0.286rem;
+   }
+
    .controls-DateRangeChoose {
       .controls-DateRangeBigChoose__homeBtn .icon-16 {
          font-size: 3rem !important;
