--- a/themes/prestonew/variables.less
+++ b/themes/prestonew/variables.less
@@ -485,7 +485,7 @@
 @date-range-choose-current-value-font-weight:normal;
 @date-range-choose-current-value-height:  3.57rem;
 @date-range-choose-current-value-line-height:3.43rem;
-@date-range-choose-current-value-margin-bottom:0.286rem;
+@date-range-choose-current-value-margin-bottom: 0;
 @date-range-choose-year-height:           3rem;
 @date-range-choose-year-font-size:        1.14rem;
 @date-range-choose-year-font-weight:      normal;
