--- a/themes/prestonew/variables.less
+++ b/themes/prestonew/variables.less
@@ -669,12 +669,11 @@
 @controls-printdialog-activate-right:     3.1785rem;
 @controls-printdialog-activate-margin-top:8px;
 //MergeDialog
-@controls-MergeDialogTemplate-BreadCrumbs-line-height:   1.7857rem;
-@controls-MergeDialogTemplate-hint-font-size:            0.7rem;
-@controls-MergeDialogTemplate-radioButton-metric:        @radio-button-dot-size;
-@controls-MergeDialogTemplate-radioButton-border-radius: @radio-button-icon-border-radius;
-@controls-MergeDialogTemplate-radioButtonIcon-metric:    @radio-button-dot-size;
-@controls-MergeDialogTemplate-radioButtonIcon-margin:    @radio-button-dot-margin;
+@controls-MergeDialogTemplate-hint-font-size:                               @small-text-size;
+@controls-MergeDialogTemplate-treeDataGridView-padding-bottom:              .8571rem;
+@controls-MergeDialogTemplate-hint-font-color:                              @default-text-color;
+@controls-MergeDialogTemplate-DataGridView-td-border-bottom:                1px solid #283848 !important;
+@controls-MergeDialogTemplate-treeDataGridView-first-cell-width:            1rem;
 //OperationsPanel
 @controls-OperationsPanel-height:         3.57rem;
 @controls-OperationsPanel-bg:             #F0F5FB;
@@ -1061,13 +1060,3 @@
 @controls-FieldLink-link-color-hover:     @default-hover-color;
 
 @commands-button-close-icon-color:        @icon-color-primary;
-
-// --------------- //
-// OperationMerge  //
-// --------------- //
-@controls-MergeDialogTemplate-treeDataGridView-padding-bottom:             .8571rem;
-@controls-MergeDialogTemplate-hint-font-size-color:                        @default-text-color;
-@controls-MergeDialogTemplate-BreadCrumbs-main-title-color:                #FFCC99;
-@controls-MergeDialogTemplate-treeDataGridView-first-cell-padding-left:    .3333rem;
-@controls-MergeDialogTemplate-DataGridView-column-value-line-height:       .928rem;
-@controls-MergeDialogTemplate-DataGridView-td-border-bottom:               1px solid #283848 !important;
