https://online.sbis.ru/opendoc.html?guid=b9ea5cec-9539-41ab-a277-b452c3b7654b&des= Ошибка в разработку 14.07.2017 Неправильное смещение заголовков при помощи controls-DataGrid__column__type-money в денежных колонка…

--- a/components/DataGridView/DataGridView.less
+++ b/components/DataGridView/DataGridView.less
@@ -151,6 +151,9 @@
    .controls-DataGridView__th {
       &.controls-DataGrid__column__type-money{
          padding-right:@data-grid-money-header-cell-padding;
+         &:last-child {
+            padding-right: @data-grid-money-header-cell-padding-last;
+         }
       }
    }
 }
