--- a/themes/prestonew/variables.less
+++ b/themes/prestonew/variables.less
@@ -642,6 +642,7 @@
 @data-grid-cell-border-width:             @default-border-width 0;
 @data-grid-partScroll-notScrolledCell-Color:@basic-block-bg-color;
 @data-grid-money-header-cell-padding:     1.43rem;
+@data-grid-money-header-cell-padding-last:1.92rem;
 @data-grid-results-color:                 #FFCC99;
 // PrintDialog
 //По какой-то причине Firefox берёт font-size не из html, а свой, причем только при расчёте этой ширины
