--- a/components/Label/Label.tmpl
+++ b/components/Label/Label.tmpl
@@ -1,5 +1,5 @@
 <div
-   class="controls-Label controls-Label__text controls-Label__text_color controls-Label__text_size"
+   class="controls-Label controls-Label__text controls-Label__text_color controls-Label__text_size{{visible ? '' : ' ws-hidden'}}"
    title="{{tooltip}}"
    event:onclick="_clickCaptionHandler()"
 >{{caption|sanitize}}</div>
