https://online.sbis.ru/opendoc.html?guid=bd5d55fa-b4b1-491a-b766-62a89821939a&des= Ошибка в разработку 11.07.2017 Редизайн. Розница Онлайн. Размер иконок около "Перенести", "Удалить" не соответствует стандартуonlin…

--- a/themes/prestonew/variables.less
+++ b/themes/prestonew/variables.less
@@ -258,7 +258,7 @@
 @menu-item-icon-left-offset:              -.4232rem;
 @menu-item-icon24-top-offset:             0;
 @menu-item-icon24-top-offset-big:         0;
-@menu-item-icon24-left-offset:            -@default-border-width;
+@menu-item-icon24-left-offset:            -.57rem;;
 @menu-item-icon24-left-offset-big:        0;
 @menu-item-line-height:                   3.57rem;
 @menu-item-padding-16:                    2rem;
@@ -571,12 +571,12 @@
 @listView-servicefooter-padding:          0 0.8rem;
 @list-view-actions-item-height:           1.75rem;
 @list-view-actions-margin:                -.14rem .14rem;
-@list-view-actions-icon-top:              1.497rem;
-@list-view-actions-menu-text-margin:      .64rem 0 .2142rem 2.32rem;
+@list-view-actions-icon-top:              .82rem;
+@list-view-actions-menu-text-margin:      .64rem 0 .2142rem 2.92rem;
 @list-view-items-toolbar-line-height:     1.75rem;
 @list-view-items-toolbar-vertical-line-height:0.86rem;
 @list-view-items-toolbar-locked-bg:       @basic-block-bg-color;
-@list-view-items-toolbar-icon-size:       1.32rem;
+@list-view-items-toolbar-icon-size:       3rem;
 @touch-mode-items-toolbar-icon-margin-top:-0.86rem;
 @list-view-actions-active-bg:             @data-grid-bg;
 @list-view-actions-menu-icon-width:       1.75rem;
