--- a/components/WSControls/Lists/resources/TreeView/ItemTemplate.tmpl
+++ b/components/WSControls/Lists/resources/TreeView/ItemTemplate.tmpl
@@ -19,7 +19,7 @@
         <ws:for data="i in getTemplateData(...).itemLevel">
             <div class="controls-TreeView__levelPadding">&nbsp;</div>
         </ws:for>
-        <div class="controls-TreeView__expand js-controls-TreeView__expand {{projItem.isExpanded() ? 'controls-TreeView__expand__open' : ''}}"></div>
+        <div  event:onclick="_onExpandClick(projItem)" class="controls-TreeView__expand js-controls-TreeView__expand {{projItem.isExpanded() ? 'controls-TreeView__expand__open' : ''}}"></div>
     </ws:if>
 <ws:partial template="{{itemContent}}" scope="{{...}}" attributes="{{ attributes }}"></ws:partial>
 </div>
