font-weight: normal;

--- a/themes/prestonew/theme.less
+++ b/themes/prestonew/theme.less
@@ -531,6 +531,7 @@ body {
     -webkit-box-shadow: none!important;
     background: transparent !important;
     box-shadow: none!important;
+    font-weight: normal;
   }
   .ws-float-area-title {
       font-size: 1.43rem!important;
