--- a/components/RichEditor/RichEditorComponents/RichTextArea/RichTextArea.less
+++ b/components/RichEditor/RichEditorComponents/RichTextArea/RichTextArea.less
@@ -60,7 +60,7 @@
       resize: none;
       line-height: 20px;
       margin: 0;
-      padding: 6px 6px 6px 8px;
+      padding: 6px 0 0 4px;
       overflow-x: hidden;
       overflow-y: auto;
    }
