https://online.sbis.ru/opendoc.html?guid=15ffad55-162f-49df-bc10-44784e04ca49&des= Задача в разработку 04.07.2017 Написать юнит-тесты для системы фокусов по заданным кейсам…

--- a/tests/WSTest/Focus/Case23.tmpl
+++ b/tests/WSTest/Focus/Case23.tmpl
@@ -1,16 +1,16 @@
 <div>
    Scenario23
-   <!--<ws:SBIS3.CONTROLS.Panel name="AreaAbstract0">-->
-      <!--<ws:content>-->
-         <!--<input>-->
-         <!--<div></div>-->
-         <!--<div tabindex="1"></div>-->
-         <!--<textarea name="someTA" id="someTA" cols="30" rows="10"></textarea>-->
-         <!--<ws:SBIS3.CONTROLS.TextBox></ws:SBIS3.CONTROLS.TextBox>-->
-         <!--<ws:SBIS3.CONTROLS.Panel name="AreaAbstract0">-->
-            <!--<ws:content>-->
-               <!--<ws:SBIS3.CONTROLS.TextBox></ws:SBIS3.CONTROLS.TextBox>-->
-            <!--</ws:content>-->
-      <!--</ws:content>-->
-   <!--</ws:SBIS3.CONTROLS.Panel>-->
+   <ws:SBIS3.CONTROLS.Panel name="AreaAbstract0">
+      <ws:content>
+         <input class="input1">
+         <div class="div1"></div>
+         <div tabindex="1" class="div2"></div>
+         <textarea class="textArea" id="someTA" cols="30" rows="10"></textarea>
+         <ws:SBIS3.CONTROLS.TextBox name="TextBox0"/>
+         <ws:SBIS3.CONTROLS.Panel name="AreaAbstract0">
+            <ws:content>
+               <ws:SBIS3.CONTROLS.TextBox name="TextBox1"/>
+            </ws:content>
+      </ws:content>
+   </ws:SBIS3.CONTROLS.Panel>
 </div>
