--- a/tests/WSTest/Focus/Case24.tmpl
+++ b/tests/WSTest/Focus/Case24.tmpl
@@ -1,5 +1,6 @@
 <div>
    Scenario24
+   <input type="text" class="input1">
    <ws:SBIS3.CONTROLS.Panel name="AreaAbstract1">
       <ws:content>
          <input class="input2" type="text">
