--- a/tests/WSTest/Focus/Case29.tmpl
+++ b/tests/WSTest/Focus/Case29.tmpl
@@ -1,12 +1,12 @@
 <div>
    Scenario29
    <ws:SBIS3.CONTROLS.Panel name="AreaAbstract0">
-      <ws:coontent>
-         <ws:SBIS3.CONTROLS.Panel name="AreaAbstract0" activableByClick="{{ false }}">
+      <ws:content>
+         <ws:SBIS3.CONTROLS.Panel name="AreaAbstract1" activableByClick="{{ false }}">
             <ws:content>
-               <input>
+               <input type="text" class="input1">
             </ws:content>
          </ws:SBIS3.CONTROLS.Panel>
-      </ws:coontent>
+      </ws:content>
    </ws:SBIS3.CONTROLS.Panel>
 </div>
