--- a/tests/WSTest/Focus/Case26.tmpl
+++ b/tests/WSTest/Focus/Case26.tmpl
@@ -1,7 +1,5 @@
 <div>
    Scenario26
-   <ws:SBIS3.CONTROLS.Panel name="AreaAbstract0">
-      <ws:SBIS.CONTROLS.TextBox name="TextBox0"/>
-      <div></div>
-   </ws:SBIS3.CONTROLS.Panel>
+   <ws:SBIS3.CONTROLS.TextBox name="TextBox0"/>
+   <div class="div1" tabindex="0"></div>
 </div>
