https://online.sbis.ru/opendoc.html?guid=3ee8ff90-f8ff-4a97-bc9b-b0b654692db9&des= Ошибка в разработку 28.07.2017 Редизайн. Розница Онлайн. размер кнопки закрытия быстрого фильтра по магазину/кассе сейчас 50рх, а д…

--- a/components/DropdownList/DropdownList.less
+++ b/components/DropdownList/DropdownList.less
@@ -152,8 +152,8 @@
          margin-top: @DropdownList-picker-margin-top;
          .controls-DropdownList__close-picker {
             position: absolute;
-            right: 6px;
-            top: 4px;
+            right: @DropdownList-picker-close-btn-right;
+            top: @DropdownList-picker-close-btn-top;
             cursor: pointer;
             &:hover {
                color: #313E78!important;
