--- a/themes/online/variables.less
+++ b/themes/online/variables.less
@@ -2137,6 +2137,8 @@
 @DropdownList-picker-offset:                          0 0 0 1px;
 @DropdownList-picker-fastdatafilter-offset:           1px 0 0 1px;
 @DropdownList-picker-margin-top:                      -1px;
+@DropdownList-picker-close-btn-top:                   4px;
+@DropdownList-picker-close-btn-right:                 6px;
 @DropdownList-picker-head-margin:                     0;
 @DropdownList-picker-head-padding:                    4px 8px;
 @DropdownList-picker-head-duplicate-type-top-padding: 4px;
