--- a/themes/prestonew/theme.less
+++ b/themes/prestonew/theme.less
@@ -1036,6 +1036,12 @@ body {
       }
    }
    .controls-DropdownList__picker {
+      .controls-DropdownList__close-picker.icon-24 {
+         font-size: 3rem !important;
+         height: 3rem !important;
+         width: 3rem !important;
+         line-height: 3rem !important;
+      }
       .controls-DropdownList__multiselect .controls-DropdownList__itemCheckBox {
          width: 2.286rem;
       }
