--- a/themes/prestonew/variables.less
+++ b/themes/prestonew/variables.less
@@ -922,6 +922,8 @@
 @DropdownList-footer-hasMore-top:         1.1rem;
 @DropdownList-picker-menu-item-color:     #F0F5FB;
 @DropdownList-picker-menu-item-hover:     #E0ECF5;
+@DropdownList-picker-close-btn-top:       0;
+@DropdownList-picker-close-btn-right:     0;
 @list-view-loading-indicator-gradient-bg: url(@list-view-scroll-spritesheet) no-repeat center;
 @list-view-loading-indicator-gradient-bg-up:url(@list-view-scroll-spritesheet) no-repeat center;
 @text-box-placeholder-color: 				   rgba(96,170,221, .2);
