https://online.sbis.ru/opendoc.html?guid=126b96d9-b0fb-44f1-9166-17afa4603994&des= Ошибка в разработку 31.07.2017 3.17.20. Редизайн. Съехал чек-бокс в карточке скидки при добавлении точки продаж Ожидаемый рез-т: …

--- a/themes/prestonew/theme.less
+++ b/themes/prestonew/theme.less
@@ -388,6 +388,9 @@ body .ws-field-button.ws-button-classic.sbisname-window-title-close.ws-enabled {
 .controls-Browser {
    .controls-Browser__tableCell-search {
       width: 19.44rem;
+      .controls-Browser__selectAllCheckBox {
+         .align-self(center);
+      }
    }
    .controls-Browser__search {
       width: 18.61rem;
