https://online.sbis.ru/opendoc.html?guid=6e7583d9-5b9d-4b68-91b5-08533308e95f&des= Ошибка в разработку 26.07.2017 Редизайн. 3.17.20. Кнопка закрытия в сообщении с предупреждением не соответствует стандарту Как по…

--- a/components/InformationPopup/InformationPopup.less
+++ b/components/InformationPopup/InformationPopup.less
@@ -15,9 +15,11 @@
       &:before {
          content: '';
          font-size: @controls-InformationPopup-closeButton-font-size;
-         font-family: "cbuc-icons24 Regular", cbuc-icons24;
+         font-family: @controls-InformationPopup-closeButton-font-family;
          color: @controls-InformationPopup-closeButton-color;
-         &:hover {
+      }
+      &:hover {
+         &:before {
             color: @controls-InformationPopup-closeButton-hover-color;
          }
       }
