--- a/themes/carrynew/variables.less
+++ b/themes/carrynew/variables.less
@@ -199,7 +199,9 @@
 @controls-Scrollbar-light-hover-thumb-color:rgba(0, 0, 0, 0.10);
 @controls-Scrollbar-light-active-thumb-color:rgba(0, 0, 0, 0.15);
 //InformationPopup
-@controls-InformationPopup-bg:            #fff;
+@controls-InformationPopup-bg:                           #fff;
+@controls-InformationPopup-closeButton-color:            #CCCCCC;
+@controls-InformationPopup-closeButton-hover-color:      #313E78;
 //SubmitPopup
 @controls-SubmitPopup-message-color:      #000;
 //TabButton
