--- a/themes/prestonew/variables.less
+++ b/themes/prestonew/variables.less
@@ -805,13 +805,21 @@
 @controls-Scrollbar-light-hover-thumb-color:rgba(0, 0, 0, 0.10);
 @controls-Scrollbar-light-active-thumb-color:rgba(0, 0, 0, 0.15);
 //InformationPopup
-@controls-InformationPopup-bg:            #2C3E50;
-@controls-InformationPopup-default-status-border-color:@default-border-color;
-@controls-InformationPopup-border:        @default-border-width solid;
-@controls-InformationPopup-border-bottom: @controls-InformationPopup-border;
-@controls-InformationPopup-border-top:    @controls-InformationPopup-border;
-@controls-InformationPopup-border-left:   @controls-InformationPopup-border;
-@controls-InformationPopup-border-right:  @controls-InformationPopup-border;
+@controls-InformationPopup-bg:                           #2C3E50;
+@controls-InformationPopup-default-status-border-color:  @default-border-color;
+@controls-InformationPopup-border:                       1px solid;
+@controls-InformationPopup-border-bottom:                @controls-InformationPopup-border;
+@controls-InformationPopup-border-top:                   @controls-InformationPopup-border;
+@controls-InformationPopup-border-left:                  @controls-InformationPopup-border;
+@controls-InformationPopup-border-right:                 @controls-InformationPopup-border;
+@controls-InformationPopup-closeButton-top:              6px;
+@controls-InformationPopup-closeButton-right:            6px;
+@controls-InformationPopup-closeButton-width:            1.7857rem;
+@controls-InformationPopup-closeButton-height:           1.7857rem;
+@controls-InformationPopup-closeButton-color:            #8991A9;
+@controls-InformationPopup-closeButton-hover-color:      #B9E9FF;
+@controls-InformationPopup-closeButton-font-size:        1.7857rem;
+@controls-InformationPopup-closeButton-font-family:      @icon-font;
 //SubmitPopup
 @controls-SubmitPopup-size-standard-width:28rem;
 @controls-SubmitPopup-button-min-width:   10rem;
