--- a/themes/online/variables.less
+++ b/themes/online/variables.less
@@ -2448,6 +2448,7 @@
 @controls-InformationPopup-closeButton-font-size:             24px;
 @controls-InformationPopup-closeButton-color:                 #CCCCCC;
 @controls-InformationPopup-closeButton-hover-color:           @icon-active-color;
+@controls-InformationPopup-closeButton-font-family:           'cbuc-icons24';
 
 //NotificationPopup
 @controls-NotificationPopup-border:                                          @float-area-border;
