https://online.sbis.ru/opendoc.html?guid=20999c83-b489-4681-b034-980c2b409cc3&des= Ошибка в разработку 20.07.2017 Дневная тема.При открытии карточки стоп-листа вместо галочки подгружается иконка раскрытия выпадающе…

--- a/components/Toolbar/Toolbar.tmpl
+++ b/components/Toolbar/Toolbar.tmpl
@@ -7,6 +7,8 @@
             name="controls-ToolBar__menuIcon"
             class="controls-ToolBar__menuIcon"
             idProperty="{{idProperty}}"
+            items="{{menuItems}}"
+            visible="{{menuIsVisible}}"
             parentProperty="{{parentProperty}}"
             displayProperty="{{displayProperty}}"
             additionalProperty="{{additionalProperty}}"
