отключаю немного магии

--- a/components/WSControls/Lists/ListView2.tmpl
+++ b/components/WSControls/Lists/ListView2.tmpl
@@ -3,7 +3,7 @@
      event:onmousemove="_mouseMove()">
    <div class="controls-ListView__itemsContainer">
       <ws:partial template="{{_itemsTemplate}}" hoveredIndex="{{hoveredIndex}}" records="{{_records}}"
-                  tplData="{{_tplData}}" scope="{{...}}"/>
+                  scope="{{...}}"/>
    </div>
 
    <ws:if data="{{loading}}">
