--- a/components/WSControls/Lists/resources/TreeView/ItemTemplate.tmpl
+++ b/components/WSControls/Lists/resources/TreeView/ItemTemplate.tmpl
@@ -21,5 +21,5 @@
         </ws:for>
         <div  event:onclick="_onExpandClick(projItem)" class="controls-TreeView__expand js-controls-TreeView__expand {{projItem.isExpanded() ? 'controls-TreeView__expand__open' : ''}}"></div>
     </ws:if>
-<ws:partial template="{{itemContent}}" scope="{{...}}" attributes="{{ attributes }}"></ws:partial>
+<ws:partial template="{{contentTemplate}}" scope="{{...}}" attributes="{{ attributes }}"></ws:partial>
 </div>
