размер кнопки "Ещё" по стандарту редизайна престо https://online.sbis.ru/opendoc.html?guid=3eb6adb5-b519-4048-bb2a-1fec559a2b4d&des= Ошибка в разработку 31.07.2017 Разводящая розничных отчетов - ссылка "еще" должна быть размером текста реестра: для средней темы 21…

--- a/components/ListView/ListView.less
+++ b/components/ListView/ListView.less
@@ -184,6 +184,7 @@
 .controls-ListView__loadMoreButton {
    height: @listView-servicefooter-height;
    line-height: @listView-servicefooter-height;
+   font-size: @listView-loadmorebutton-font-size;
 }
 
 .controls-ListView__counter {
