--- a/themes/prestonew/variables.less
+++ b/themes/prestonew/variables.less
@@ -586,6 +586,7 @@
 @list-view-min-height:                    8rem;
 @listView-servicefooter-height:           1.47rem;
 @listView-servicefooter-padding:          0 0.8rem;
+@listView-loadmorebutton-font-size:       0.8571rem;
 @list-view-actions-item-height:           1.75rem;
 @list-view-actions-margin:                -.14rem .14rem;
 @list-view-actions-icon-top:              .82rem;
