--- a/themes/genie/variables.less
+++ b/themes/genie/variables.less
@@ -1525,6 +1525,8 @@
 @listView-servicefooter-height:                 32px;
 @listView-servicefooter-fontsize:               12px;
 
+@listView-loadmorebutton-font-size:             @link-font-size;
+
 // ItemsToolbar small
 @list-view-small-items-toolbar-line-height:         16px;
 @list-view-small-actions-item-height:               16px;
