--- a/themes/online/variables.less
+++ b/themes/online/variables.less
@@ -1750,6 +1750,8 @@
 @listView-servicefooter-height:                 32px;
 @listView-servicefooter-fontsize:               12px;
 
+@listView-loadmorebutton-font-size:             @link-font-size;
+
 @scrollPaging-padding:                          32px;
 
 // ItemsToolbar small
