--- a/components/WSControls/Lists/resources/ItemContentTemplate.tmpl
+++ b/components/WSControls/Lists/resources/ItemContentTemplate.tmpl
@@ -1,3 +1,3 @@
 <div>
-   {{(getPropertyValue(item, displayProperty))|sanitize}}
+   {{(_getPropertyValue(item, _options.displayProperty))|sanitize}}
 </div>
