размер иконок в контекстном меню редизайн престо https://online.sbis.ru/opendoc.html?guid=bd5d55fa-b4b1-491a-b766-62a89821939a&des= Ошибка в разработку 11.07.2017 Редизайн. Розница Онлайн. Размер иконок около "Перенести", "Удалить" не соответствует стандартуonlin…

--- a/themes/prestonew/variables.less
+++ b/themes/prestonew/variables.less
@@ -594,6 +594,7 @@
 @list-view-items-toolbar-vertical-line-height:0.86rem;
 @list-view-items-toolbar-locked-bg:       @basic-block-bg-color;
 @list-view-items-toolbar-icon-size:       1.32rem;
+@list-view-items-toolbar-menu-icon-size:  @icon-large-size;
 @touch-mode-items-toolbar-icon-margin-top:-0.86rem;
 @list-view-actions-active-bg:             @data-grid-bg;
 @list-view-actions-menu-icon-width:       1.75rem;
